@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.27 2010-05-24 19:44:15 dereine Exp $
+; $Id: views.info,v 1.7.6.28 2010-05-25 06:10:32 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -37,6 +37,7 @@ files[] = handlers/views_handler_filter_date.inc
 files[] = handlers/views_handler_filter_equality.inc
 files[] = handlers/views_handler_filter_float.inc
 files[] = handlers/views_handler_filter_in_operator.inc
+files[] = handlers/views_handler_filter_in_operator.test
 files[] = handlers/views_handler_filter_many_to_one.inc
 files[] = handlers/views_handler_filter_numeric.inc
 files[] = handlers/views_handler_filter_string.inc
